# edify-os

./: .env.example  .gitignore  ARCHETYPE_DESIGNS.md  HEARTBEAT_ADDITION.md  PRD-archetype-skills.md  PRD-chat-backend-rewire.md  PRD-chat-reliability.md  PRD-content-overhaul.md  PRD-dashboard-polish.md  PRD-decision-lab.html  PRD-decision-lab.md  PRD-demo-mode-gate.md  PRD-edify-fixes-apr27.md  PRD-encryption.md  PRD-phase-1-foundation.md  PRD-phase-1-onboarding.md  PRD-phase-2a-google-oauth.md  PRD-phase-2b-calendar-tools.md  PRD-phase-2c-gmail-tools.md  PRD-phase-3-grants-and-crm.md  PRD-proactive-heartbeats.html  PRD-proactive-heartbeats.md  PRD-subagents-and-archetypes.md  PRD-user-guide.html  PRD-user-guide.md  PRD-wow-factor-phases.md  ROADMAP-archetype-integrations.md  SESSION-LOG-canva-test-cleanup.md  SESSION-LOG.md  SMOKE-TEST-NEXT-STEPS-SPRINT-2-AGENT-2.md  SMOKE-TEST-NEXT-STEPS-SPRINT-2-AGENT-3.md  SMOKE-TEST-NEXT-STEPS.md  design-system-audit-2026-04-23.md  docker-compose.yml  generate_prd_pdf.py  package.json  photo-credits.md  pnpm-lock.yaml  tsconfig.base.json  vercel.json
services/agents/: pyproject.toml
services/agents/src/: config.py  main.py
services/agents/src/agents/: base.py
services/agents/src/api/: models.py  router.py
services/agents/src/claude/: __init__.py  client.py  tools.py
services/agents/src/decision_lab/: history.py  models.py  orchestrator.py  prompts.py  router.py  synthesis.py
services/agents/src/documents/: __init__.py  chunker.py  ingester.py  models.py  parser.py  router.py
services/agents/src/heartbeat/: config.py  (+6 more)
(+542 files in other folders)
